--- a/config.toml
+++ b/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 title = "desc"
 defaultContentLanguage = "ru"
 defaultContentLanguageInSubdir = true
+theme = "dimension"
 [languages]
   [languages.ru]
     languageName = "Русский язык [ru]"
