--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/dimension"]
 	path = themes/dimension
-	url = git@github.com:spkngb/dimension.git
+	url = https://github.com/spkngb/dimension
